--- a/Backtesting/src/main/resources/stylesheet.css
+++ b/Backtesting/src/main/resources/stylesheet.css
@@ -1,3 +1,52 @@
-.quotes-chart .chart-series-line {
+.quotes-chart .chart-series-line,
+.balance-chart .chart-series-line{
     -fx-stroke-width: 1px;
+}
+
+.default-color0.chart-area-symbol { -fx-background-color: #e9967a, #ffa07a; }
+.default-color1.chart-area-symbol { -fx-background-color: #f0e68c, #fffacd; }
+.default-color2.chart-area-symbol { -fx-background-color: #dda0dd, #d8bfd855; }
+
+.default-color0.chart-series-area-line { -fx-stroke: #3ffa32; }
+.default-color1.chart-series-area-line { -fx-stroke: #f0e68c; }
+.default-color2.chart-series-area-line { -fx-stroke: #dda0dd; }
+
+.default-color0.chart-series-area-fill { -fx-fill: rgba(63, 250, 50, 0.12); }
+.default-color1.chart-series-area-fill { -fx-fill: #fffacd55; }
+.default-color2.chart-series-area-fill { -fx-fill: #d8bfd855; }
+
+
+.chart {
+    -fx-padding: 10px;
+    -fx-background-color: rgba(10, 18, 35, 0.65);
+}
+
+.chart-plot-background {
+    -fx-background-color: rgb(44, 46, 45);
+}
+
+.axis {
+    -fx-tick-label-fill: rgb(166, 163, 163);
+}
+
+.chart-vertical-grid-lines {
+    -fx-stroke: #58585a;
+}
+.chart-horizontal-grid-lines {
+    -fx-stroke: #58585a;
+}
+
+
+/* Balance chart */
+.balance-chart .default-color0.chart-series-area-line { -fx-stroke: #1d91fa; }
+.balance-chart .default-color0.chart-series-area-fill { -fx-fill: rgba(91, 194, 250, 0.4); }
+
+
+
+/* Buttons */
+.icons{
+    -fx-font-family: FontAwesome;
+    -fx-font-size: 16px;
+    -fx-effect: innershadow( three-pass-box , derive(-icons-color,-70%) , 0.1em, 0.0 , 0.07em, 0.07em );
+    -fx-text-fill: linear-gradient(to bottom, derive(-icons-color,20%) 10%, derive(-icons-color,-40%) 80%);
 }
