--- a/Backtesting/src/main/resources/BacktestUi.fxml
+++ b/Backtesting/src/main/resources/BacktestUi.fxml
@@ -1,23 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.early_reflections.ui.AwesomeIcons?>
+<?import com.early_reflections.ui.Chart?>
 <?import javafx.scene.chart.AreaChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-<?import com.early_reflections.ui.AwesomeIcons?>
 
-<?import com.early_reflections.ui.Chart?>
-<SplitPane dividerPositions="0.09684684684684684, 0.7207207207207207" orientation="VERTICAL" prefHeight="446.0" prefWidth="502.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.early_reflections.ui.Controller">
-   <items>
-      <ToolBar prefHeight="40.0" prefWidth="200.0">
+
+<BorderPane xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.early_reflections.ui.Controller">
+   <center>
+      <SplitPane dividerPositions="0.9412698412698413">
+         <items>
+            <SplitPane dividerPositions="0.7219730941704036" orientation="VERTICAL" prefHeight="446.0" prefWidth="502.0">
+               <items>
+                  <!-- Quotes chart -->
+                  <Chart fx:id="quotesChart" animated="false" createSymbols="false" legendVisible="false" styleClass="quotes-chart">
+                    <xAxis>
+                      <NumberAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </Chart>
+
+                              <!-- Balance chart-->
+                  <AreaChart fx:id="balanceChart" animated="false" createSymbols="false" legendVisible="false" minHeight="120.0" prefHeight="160.0" styleClass="balance-chart">
+                     <xAxis>
+                        <NumberAxis side="BOTTOM" />
+                     </xAxis>
+                     <yAxis>
+                        <NumberAxis side="LEFT" />
+                     </yAxis>
+                  </AreaChart>
+
+                           </items>
+            </SplitPane>
+            <TabPane prefWidth="120.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Untitled Tab 1">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </Tab>
+                <Tab text="Untitled Tab 2">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
+         </items>
+      </SplitPane>
+   </center>
+   <top>
+      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <items>
-            <Button fx:id="playButton" mnemonicParsing="false" >
+            <Button fx:id="playButton" mnemonicParsing="false">
                 <text>
-                    <AwesomeIcons fx:constant="ICON_PLAY"/>
+                    <AwesomeIcons fx:constant="ICON_PLAY" />
                 </text>
                <font>
                   <Font name="FontAwesome" size="14.0" />
@@ -25,15 +74,15 @@
             </Button>
             <Button fx:id="pauseButton" mnemonicParsing="false">
                 <text>
-                    <AwesomeIcons fx:constant="ICON_PAUSE"/>
+                    <AwesomeIcons fx:constant="ICON_PAUSE" />
                 </text>
                 <font>
                     <Font name="FontAwesome" size="14.0" />
                 </font>
             </Button>
-            <Button fx:id="stopButton" mnemonicParsing="false" >
+            <Button fx:id="stopButton" mnemonicParsing="false">
                 <text>
-                    <AwesomeIcons fx:constant="ICON_STOP"/>
+                    <AwesomeIcons fx:constant="ICON_STOP" />
                 </text>
                 <font>
                     <Font name="FontAwesome" size="14.0" />
@@ -43,25 +92,5 @@
             <Slider fx:id="speedSlider" />
         </items>
       </ToolBar>
-      <!-- Quotes chart -->
-      <Chart fx:id="quotesChart" animated="false" createSymbols="false" legendVisible="false" styleClass="quotes-chart">
-        <xAxis>
-          <NumberAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </Chart>
-
-      <!-- Balance chart-->
-      <AreaChart fx:id="balanceChart" animated="false" createSymbols="false" legendVisible="false" minHeight="120.0" prefHeight="160.0" styleClass="balance-chart">
-         <xAxis>
-            <NumberAxis side="BOTTOM" />
-         </xAxis>
-         <yAxis>
-            <NumberAxis side="LEFT" />
-         </yAxis>
-      </AreaChart>
-
-   </items>
-</SplitPane>
+   </top>
+</BorderPane>
