--- a/Backtesting/src/main/resources/BacktestUi.fxml
+++ b/Backtesting/src/main/resources/BacktestUi.fxml
@@ -2,7 +2,6 @@
 
 <?import com.early_reflections.ui.AwesomeIcons?>
 <?import com.early_reflections.ui.Chart?>
-<?import javafx.embed.swing.SwingNode?>
 <?import javafx.scene.chart.AreaChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
@@ -16,86 +15,85 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.early_reflections.ui.Controller">
-   <center>
-      <SplitPane dividerPositions="0.9412698412698413">
-         <items>
-            <SplitPane dividerPositions="0.722, 0.5" orientation="VERTICAL" prefHeight="446.0" prefWidth="502.0">
-               <items>
+<BorderPane xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.early_reflections.ui.Controller">
+    <center>
+        <SplitPane dividerPositions="0.9412698412698413">
+            <items>
+                <SplitPane dividerPositions="0.722, 0.5" orientation="VERTICAL" prefHeight="446.0" prefWidth="502.0">
+                    <items>
 
-                   <SwingNode fx:id="swingNode">
+                        <!-- Quotes chart -->
+                        <Chart fx:id="quotesChart" animated="false" createSymbols="false" legendVisible="false"
+                               styleClass="quotes-chart">
+                            <xAxis>
+                                <NumberAxis side="BOTTOM"/>
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis side="LEFT"/>
+                            </yAxis>
+                        </Chart>
 
+                        <!-- Balance chart-->
+                        <AreaChart fx:id="balanceChart" animated="false" createSymbols="false" legendVisible="false"
+                                   minHeight="120.0" prefHeight="160.0" styleClass="balance-chart">
+                            <xAxis>
+                                <NumberAxis side="BOTTOM"/>
+                            </xAxis>
+                            <yAxis>
+                                <NumberAxis side="LEFT"/>
+                            </yAxis>
+                        </AreaChart>
 
-                   </SwingNode>
-                  <!-- Quotes chart -->
-                  <Chart fx:id="quotesChart" animated="false" createSymbols="false" legendVisible="false" styleClass="quotes-chart">
-                    <xAxis>
-                      <NumberAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </Chart>
-
-                              <!-- Balance chart-->
-                  <AreaChart fx:id="balanceChart" animated="false" createSymbols="false" legendVisible="false" minHeight="120.0" prefHeight="160.0" styleClass="balance-chart">
-                     <xAxis>
-                        <NumberAxis side="BOTTOM" />
-                     </xAxis>
-                     <yAxis>
-                        <NumberAxis side="LEFT" />
-                     </yAxis>
-                  </AreaChart>
-
-                           </items>
-            </SplitPane>
-            <TabPane prefWidth="120.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE">
-              <tabs>
-                <Tab text="Settings">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-                <Tab text="Untitled Tab 2">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                  </content>
-                </Tab>
-              </tabs>
-            </TabPane>
-         </items>
-      </SplitPane>
-   </center>
-   <top>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <items>
-            <Button fx:id="playButton" mnemonicParsing="false">
-                <text>
-                    <AwesomeIcons fx:constant="ICON_PLAY" />
-                </text>
-               <font>
-                  <Font name="FontAwesome" size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="pauseButton" mnemonicParsing="false">
-                <text>
-                    <AwesomeIcons fx:constant="ICON_PAUSE" />
-                </text>
-                <font>
-                    <Font name="FontAwesome" size="14.0" />
-                </font>
-            </Button>
-            <Button fx:id="stopButton" mnemonicParsing="false">
-                <text>
-                    <AwesomeIcons fx:constant="ICON_STOP" />
-                </text>
-                <font>
-                    <Font name="FontAwesome" size="14.0" />
-                </font>
-            </Button>
-            <Label text="Speed" />
-            <Slider fx:id="speedSlider" />
-        </items>
-      </ToolBar>
-   </top>
+                    </items>
+                </SplitPane>
+                <TabPane prefWidth="120.0" side="RIGHT" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                        <Tab text="Settings">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                            </content>
+                        </Tab>
+                        <Tab text="Untitled Tab 2">
+                            <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
+                            </content>
+                        </Tab>
+                    </tabs>
+                </TabPane>
+            </items>
+        </SplitPane>
+    </center>
+    <top>
+        <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <items>
+                <Button fx:id="playButton" mnemonicParsing="false">
+                    <text>
+                        <AwesomeIcons fx:constant="ICON_PLAY"/>
+                    </text>
+                    <font>
+                        <Font name="FontAwesome" size="14.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="pauseButton" mnemonicParsing="false">
+                    <text>
+                        <AwesomeIcons fx:constant="ICON_PAUSE"/>
+                    </text>
+                    <font>
+                        <Font name="FontAwesome" size="14.0"/>
+                    </font>
+                </Button>
+                <Button fx:id="stopButton" mnemonicParsing="false">
+                    <text>
+                        <AwesomeIcons fx:constant="ICON_STOP"/>
+                    </text>
+                    <font>
+                        <Font name="FontAwesome" size="14.0"/>
+                    </font>
+                </Button>
+                <Label text="Speed"/>
+                <Slider fx:id="speedSlider"/>
+            </items>
+        </ToolBar>
+    </top>
 </BorderPane>
